package abstractfactory.bombed;


import basic.Wall;

public class BombedWall extends Wall {

}
