package abstractfactory.enchanted;


import basic.Door;
import basic.Room;

public class EnchantedDoor extends Door {

    public EnchantedDoor(Room r1, Room r2){
        super(r1,r2);
    }
}
