package basic;

public interface MapSite {

    void enter();

}
